<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/video_variant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/psd_recyclerview_item_height_default"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/psd_offset_default"
        android:paddingLeft="@dimen/psd_offset_default"
        android:paddingEnd="@dimen/psd_offset_default"
        android:paddingRight="@dimen/psd_offset_default"
        android:text="@string/psd_type_video"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toTopOf="@+id/photo_variant" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/photo_variant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/psd_recyclerview_item_height_default"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/psd_offset_default"
        android:paddingLeft="@dimen/psd_offset_default"
        android:paddingEnd="@dimen/psd_offset_default"
        android:paddingRight="@dimen/psd_offset_default"
        android:text="@string/psd_photo"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toTopOf="@+id/gallery_variant" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/gallery_variant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/psd_recyclerview_item_height_default"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/psd_offset_default"
        android:paddingLeft="@dimen/psd_offset_default"
        android:paddingEnd="@dimen/psd_offset_default"
        android:paddingRight="@dimen/psd_offset_default"
        android:text="@string/psd_gallery"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toTopOf="@+id/custom_variant" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/custom_variant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/psd_recyclerview_item_height_default"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/psd_offset_default"
        android:paddingLeft="@dimen/psd_offset_default"
        android:paddingEnd="@dimen/psd_offset_default"
        android:paddingRight="@dimen/psd_offset_default"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toTopOf="@id/send_logs_variant" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/send_logs_variant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/psd_recyclerview_item_height_default"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/psd_offset_default"
        android:paddingLeft="@dimen/psd_offset_default"
        android:paddingEnd="@dimen/psd_offset_default"
        android:paddingRight="@dimen/psd_offset_default"
        android:text="@string/send_library_logs"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>